projects/los-business/lead/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lead
  name: lead-svc
  namespace: los-business-dev
spec:
  ports:
    - port: 7011
      protocol: TCP
      targetPort: 7011
  selector:
    app: lead
